@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2026-01-22T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-23T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-04T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2026-02-05T00:00:00Z",
+      "count": 0,
+      "uniques": 0
     }
   ]
 }
